[tool.poetry]
name = "lauz"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
lshashpy3 = "^0.0.9"
simhash = "^2.1.2"
disjoint-set = "^0.8.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
